-
Bug
-
Resolution: Done
-
P4: Low
-
5.9.2
-
None
-
Windows 10
Visual Studio 2015
-
571b11d41c9dadd5ef11e4e954c16c5ca39d718e (qtbase/5.9, 20.10.2017. 5.9.3)
Qt 5.9.2 fails to build if configured with -no-feature-tabletevent
Problem source: qwindowstabletsupport.h is included to qwindowscontext.cpp regardless of this feature check.
Attached patch fixes the problem.
For Gerrit Dashboard: QTBUG-63874 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
208892,2 | Windows QPA: Fix build with -no-feature-tabletevent | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |